--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router": "5.0.1",
     "react-router-dom": "5.0.1",
     "react-scripts": "3.0.1",
+    "react-seatmap": "^0.1.2",
     "reactstrap": "8.0.0"
   },
   "scripts": {
