--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,53 +1,53 @@
-{
-    "editor.autoIndent": false,
-    "editor.codeActionsOnSave": {
-      "source.organizeImports": false
-    },
-    "editor.codeLens": true,
-    "editor.cursorBlinking": "solid",
-    "editor.cursorSmoothCaretAnimation": true,
-    "editor.cursorStyle": "line",
-    "editor.fontSize": 14,
-    "editor.fontFamily": "Dank Mono, Operator Mono, Fira Code, Inconsolata, Menlo",
-    "editor.fontLigatures": true,
-    "editor.formatOnPaste": true,
-    "editor.formatOnType": false,
-    "editor.formatOnSave": false,
-    "editor.letterSpacing": 0.5,
-    "editor.lineHeight": 25,
-    "editor.minimap.enabled": false,
-    "editor.renderWhitespace": "none",
-    "editor.tabCompletion": "on",
-    "editor.tabSize": 2,
-    "editor.wordWrap": "off",
-    "files.autoSave": false,
-    "files.autoSaveDelay": 1000,
-    "files.exclude": {
-      "**/.git": true,
-      "**/.DS_Store": true,
-      "**/*.js": {
-        "when": "$(basename).ts"
-      },
-      "**/*.js.map": {
-        "when": "$(basename)"
-      }
-    },
-    "files.hotExit": "onExit",
-    "files.defaultLanguage": "typescript",
-    "files.trimTrailingWhitespace": true,
-    "files.autoSave": false,
-    "files.autoSaveDelay": 1000,
-    "files.exclude": {
-      "**/.git": true,
-      "**/.DS_Store": true,
-      "**/*.js": {
-        "when": "$(basename).ts"
-      },
-      "**/*.js.map": {
-        "when": "$(basename)"
-      }
-    },
-    "files.hotExit": "onExit",
-    "files.defaultLanguage": "typescript",
-    "files.trimTrailingWhitespace": true
-  }
+// {
+//     "editor.autoIndent": false,
+//     "editor.codeActionsOnSave": {
+//       "source.organizeImports": false
+//     },
+//     "editor.codeLens": true,
+//     "editor.cursorBlinking": "solid",
+//     "editor.cursorSmoothCaretAnimation": true,
+//     "editor.cursorStyle": "line",
+//     "editor.fontSize": 14,
+//     "editor.fontFamily": "Dank Mono, Operator Mono, Fira Code, Inconsolata, Menlo",
+//     "editor.fontLigatures": true,
+//     "editor.formatOnPaste": true,
+//     "editor.formatOnType": false,
+//     "editor.formatOnSave": false,
+//     "editor.letterSpacing": 0.5,
+//     "editor.lineHeight": 25,
+//     "editor.minimap.enabled": false,
+//     "editor.renderWhitespace": "none",
+//     "editor.tabCompletion": "on",
+//     "editor.tabSize": 2,
+//     "editor.wordWrap": "off",
+//     "files.autoSave": false,
+//     "files.autoSaveDelay": 1000,
+//     "files.exclude": {
+//       "**/.git": true,
+//       "**/.DS_Store": true,
+//       "**/*.js": {
+//         "when": "$(basename).ts"
+//       },
+//       "**/*.js.map": {
+//         "when": "$(basename)"
+//       }
+//     },
+//     "files.hotExit": "onExit",
+//     "files.defaultLanguage": "typescript",
+//     "files.trimTrailingWhitespace": true,
+//     "files.autoSave": false,
+//     "files.autoSaveDelay": 1000,
+//     "files.exclude": {
+//       "**/.git": true,
+//       "**/.DS_Store": true,
+//       "**/*.js": {
+//         "when": "$(basename).ts"
+//       },
+//       "**/*.js.map": {
+//         "when": "$(basename)"
+//       }
+//     },
+//     "files.hotExit": "onExit",
+//     "files.defaultLanguage": "typescript",
+//     "files.trimTrailingWhitespace": true
+//   }
